--- a/Futura/Futura/Web.config
+++ b/Futura/Futura/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Futura-20131202094650.mdf;Initial Catalog=aspnet-Futura-20131202094650;Integrated Security=True"
+    <add name="FuturaEntity" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Futura-20131202094650.mdf;Initial Catalog=aspnet-Futura-20131202094650;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -49,6 +49,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="Futura.DAL.FuturaEntity, Futura">
+        <databaseInitializer type="Futura.DAL.Projectinitializer, Futura" />
+      </context>           
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
